--- a/app/Styles/Result.module.css
+++ b/app/Styles/Result.module.css
@@ -165,6 +165,8 @@
     -ms-user-select: none;     /* IE/Edge */
     user-select: none;  
 
+    font-size: 2.2rem;
+    
     
 }
 
@@ -209,7 +211,9 @@
     .button {
         width: 280px;
         height: 55px;
-        font-size: 1.1rem;
+        font-size: 1.7rem !important;
+
+
     }
 }
 
@@ -291,7 +295,7 @@
     .button {
         width: 250px;
         height: 50px;
-        font-size: 1.45rem;
+        font-size: 1.75rem;
         letter-spacing: 1px;
 
     }
