--- a/app/globals.css
+++ b/app/globals.css
@@ -13,9 +13,9 @@
   --card-height: 70vh; 
   --max-card-height: 40rem; 
   --card-background-color: rgb(251, 251, 251); 
-  --svg-fill-color: #000; 
+  --svg-fill-color: #60AB75; 
   --svg-opacity: 1; 
-  --stroke-color: #000; 
+  --stroke-color: #60AB75; 
 
   
 }
