--- a/app/Styles/audioButtons.module.css
+++ b/app/Styles/audioButtons.module.css
@@ -35,7 +35,6 @@
     display: grid;
     place-content: center;      
     height: calc(3rem + 10px); 
-    /* height: calc(2rem + 10px);  */
 
 }
 
@@ -50,7 +49,7 @@
     padding: 0;
     font-family: var(--font-chewy), cursive;
     font-weight: 400;
-    font-size: 1.83rem;
+    font-size: 2.4rem;
     text-transform: uppercase;
     user-select: none;
     -webkit-user-select: none;
@@ -62,6 +61,7 @@
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
     color: white; 
+
 
 
 }
@@ -428,8 +428,20 @@
     
     }
 
+}
 
 
+@media(min-width: 1200px){
+
+
+
+    .buttonList {
+        display: flex; 
+        gap: 3.5rem; 
+        /* outline: 2px solid lime; */  
+    
+    
+    }
 
 
 
