--- a/app/Styles/categories.module.css
+++ b/app/Styles/categories.module.css
@@ -323,9 +323,11 @@
     height: 60px;
     width: 318px;
     color: #7f7f7f;
+    
     background-color: white;
     font-weight: bolder;
-    font-size: 1.3rem;
+    font-size: 1.8rem;
+    letter-spacing: 1px;
     display: grid;
     place-content: center;
     border-radius: 22px;
@@ -344,8 +346,6 @@
     text-align: center;
     margin: 0 auto; 
     font-size: clamp(1.5rem + 1vw, 2rem, 3rem);
-
-
 
 }
 
