--- a/app/Styles/AudioControls.module.css
+++ b/app/Styles/AudioControls.module.css
@@ -440,6 +440,25 @@
 
 
 
+#yesButton:hover {
+    /*background-color: #e8894a;
+    */transform: translate(-50%, 20%) scale(1.02);
+    box-shadow: 0 2px 8px rgba(244, 155, 83, 0.3);
+    -webkit-transform: translate(-50%, 20%) scale(1.02);
+    -moz-transform: translate(-50%, 20%) scale(1.02);
+    -ms-transform: translate(-50%, 20%) scale(1.02);
+    -o-transform: translate(-50%, 20%) scale(1.02);
+}
+
+#yesButton:active {
+    /* background-color: #d67d3e; */
+    transform: translate(-50%, 20%) scale(0.98);
+    box-shadow: 0 1px 4px rgba(244, 155, 83, 0.4);
+}
+
+
+
+
 #yesStackOne{
     background-color: rgb(156, 194, 109);
     opacity: 0.45;
