--- a/app/Styles/PostQuizCard.module.css
+++ b/app/Styles/PostQuizCard.module.css
@@ -1,65 +1,293 @@
+.card {
+    /* height: 625px; */
+    height: var(--card-height);
 
-
-
-.mainCTASection{
-
-
-    height: 100vh; 
-    width: 100vw; 
+    width:320px;    
+    position: relative;
+ 
+    background-color: #013699 !important; 
+    
     margin: 0 auto; 
+    margin-bottom: 5.9rem;
+    margin-top: -3rem !important; 
+
+    border-radius: 1rem;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+}
+
+.firstCARD{
+    background-color: #013699; 
+
+}
+
+.cardCategoryColorContainer{
+    position: relative;
+    height: 3rem;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px; 
     display: grid; 
     place-content: center;
-    background-color: #013699;
+    /* background-color: var(--category-color, #ccc); */
+    background-color: white;
+    height: 4.5rem; 
+}
 
+.categoryLabelContainer{
+    /* height: 4.5rem;  */
+    height: 5.5rem; 
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    display: grid; 
+    place-content: center;
 
-
+    
 
 }
 
+.categoryLabel {
+}
 
-.mainLogoContainer{
+.labelContainer{
+    height: 2.5rem;
+    width: 300px;
+    border-radius:25px;
+    -webkit-border-radius:25px;
+    -moz-border-radius:25px;
+    -ms-border-radius:25px;
+    -o-border-radius:25px;
+    display: grid;
+    place-content: center;
+    text-transform: uppercase;
+    margin-bottom: -0.5em;
+    font-family: var(--font-nunito), sans-serif;
+    font-weight: 700;
+    color: white;
+}
 
+.questionTextContainer{
 
-/* color: black; */
-color: white; 
-text-align: center;
-width: 60%; 
-margin: 0 auto; 
+    font-size: 1.3rem;
+    width: 70%;
+    text-align: center;
+    margin: 0 auto;
+    text-transform: uppercase;
+    font-family: var(--font-nunito), sans-serif;
+    /*position: relative;
+    */z-index: 9999999;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    right: 50%;
+    transform:translate(-50%, -30%);
+    -webkit-transform:translate(-50%, -30%);
+    -moz-transform:translate(-50%, -30%);
+    -ms-transform:translate(-50%, -30%);
+    -o-transform:translate(-50%, -30%);
+}
 
-font-size: clamp(1.5rem + 1vw, 2rem, 3rem);
+.questionText{
 
-
+    position: relative; 
+    z-index: 99999;
+    margin-top: 2em; 
+    margin-bottom: 4.5em; 
+    font-family: var(--font-nunito), sans-serif;
+    font-weight: 600;
 }
 
 
-
-.mainTextHeader{
-
-
-    font-size: 2.9rem;
-    line-height: 1.3;
-
-
-
-}
-
-.theSpan{
-
-    display: block; 
+.imageSectionContainer{
+    display: grid;  
+    place-content: center; 
     margin: 0 auto; 
-    font-size: 0.9rem;
+    width: 100%;
+    height:5em !important;
+    position: relative; 
+    z-index: 9;
+    margin-top: 0rem !important; 
+    position: absolute; 
+    top: 80%; 
+
+}
+
+
+
+
+
+.ivviLogoContainer{
+    margin: 0 auto;
+    display: grid;
+    place-content: center;
+    margin-top: 4em;
+    position: absolute;
+    /* bottom: 0%; */
+    bottom: -3%; 
+    left: 50%;
+    transform:translate(-50%, -5%);
+    -webkit-transform:translate(-50%, -5%);
+    -moz-transform:translate(-50%, -5%);
+    -ms-transform:translate(-50%, -5%);
+    -o-transform:translate(-50%, -5%);
+
+
+}
+
+
+.bySpan{
+
+
+    margin: 0 auto;
+    margin-bottom: -4em;
+
+    color: white; 
+    font-weight: bolder;
+    font-size: 1.2rem !important; 
+
+
+}
+
+
+.logoImage{
+
+
 
 
 
 }
+
+.imageSectionContainer{
+    display: grid;  
+    place-content: center; 
+    margin: 0 auto; 
+    width: 100%;
+    height:5em !important;
+    position: relative; 
+    z-index: 9;
+    margin-top: 0rem !important; 
+    position: absolute; 
+    top: 80%; 
+
+
+
+
+}
+
+.doodleContainer{
+    margin-top: 2.8em;     
+}
+
+
+
+.currentIMG{
+
+    height: 80%; 
+    display: none;
+    
+
+}
+
+
+
+#cardOne{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    position: relative;
+    width: 320px;
+    height: 555px;
+    /* background-color: #fbfbfb; */
+    background-color: #013699; 
+
+    border-radius: 0rem;
+    -webkit-border-radius: 0rem;
+    -moz-border-radius: 0rem;
+    -ms-border-radius: 0rem;
+    -o-border-radius: 0rem;
+    z-index: -2;
+   display: none;
+    transform:  translate(0rem,3em) !important;
+    box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.3);
+}
+
+#cardTwo{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: none;
+    z-index: -1;
+    margin-bottom: -5rem !important;
+    height: 555px;
+    max-height: 777px;
+    width: 320px;
+    /* background-color: #fbfbfb; */
+    background-color: #013699; 
+
+    box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.3);
+    transform:translate(0rem, 4em);
+    -webkit-transform:translate(0rem, 4em);
+    -moz-transform:translate(0rem, 4em);
+    -ms-transform:translate(0rem, 4em);
+    -o-transform:translate(0rem, 4em);
+}
+
+#cardThree{
+ width: 320px;
+ height: 400px;
+ /* background-color: /#fbfbfb; */
+ background-color: #013699; 
+
+ border-radius: 1rem;
+ -webkit-border-radius: 1rem;
+ -moz-border-radius: 1rem;
+ -ms-border-radius: 1rem;
+ -o-border-radius: 1rem;
+ /* display: none; */
+ position: absolute;
+ bottom: 0; 
+ z-index: -2;
+ margin-bottom: 0.8em;
+ box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.3);
+}
+
+#cardFour{
+    position: relative;
+    z-index: -5;
+    width: 320px;
+    height: 400px;
+    /* background-color: #fbfbfb; */
+    background-color: #013699; 
+
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border-radius: 0 0 1rem 1rem;
+    box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.3);
+    transform:translate(0, 5.5em);
+    -webkit-transform:translate(0, 5.5em);
+    -moz-transform:translate(0, 5.5em);
+    -ms-transform:translate(0, 5.5em);
+    -o-transform:translate(0, 5.5em);
+    -webkit-border-radius: 0 0 1rem 1rem;
+    -moz-border-radius: 0 0 1rem 1rem;
+    -ms-border-radius: 0 0 1rem 1rem;
+    -o-border-radius: 0 0 1rem 1rem;
+}
+
+
+
 
 .buttonSectionContainer{
 
     display: grid;
     place-content: center;
-    margin: 3em auto; 
-
-    margin-bottom: 0.5em !important;
+    margin: 0 auto; 
+    margin-top: -5em !important; 
 
 
 }
@@ -67,24 +295,23 @@ font-size: clamp(1.5rem + 1vw, 2rem, 3rem);
 
 .CTAButton{
    
+    height: 55px !important;
+    width: 280px !important;
     color: white;
-    width: 300px; 
-    height: 55px; 
+    margin: 0 auto;  
+    font-size: 1.25rem;
     font-weight: bolder;
-    font-size: 1.4rem;
     
     background-color: #f49b53;
     display: grid;
     place-content: center;
-    border-radius: 14px;
-    -webkit-border-radius: 14px;
-    -moz-border-radius: 14px;
-    -ms-border-radius: 14px;
-    -o-border-radius: 14px;
+    border-radius: 22px;
+    -webkit-border-radius: 22px;
+    -moz-border-radius: 22px;
+    -ms-border-radius: 22px;
+    -o-border-radius: 22px;
     cursor: pointer;
-
-
-
+    box-shadow: 0px 4px 1px 0px #c17a41;
 
 }
 
@@ -95,13 +322,15 @@ font-size: clamp(1.5rem + 1vw, 2rem, 3rem);
 .CTAButton:hover{
 
 
-    box-shadow: 0px 4px 1px 0px #c17a41;
+    /* box-shadow: 0px 4px 1px 0px #c17a41; */
     
 
 
     background-color: #e8894a;
     transform: translateY(-2px);
     box-shadow: 0 4px 16px rgba(244, 155, 83, 0.3);
+
+
 
 }
 
@@ -120,10 +349,20 @@ font-size: clamp(1.5rem + 1vw, 2rem, 3rem);
 
 
 
+
+
+
+
+
+
+
+
+
 .ivviLogoContainer{
 
 
     margin: 0 auto;
+    margin-top: 4rem !important;
     display: grid;  
     place-content: center;
     
@@ -134,14 +373,16 @@ font-size: clamp(1.5rem + 1vw, 2rem, 3rem);
 
 
 .bySpan{
+
+
     margin: 0 auto;
-    margin-bottom: -8em;
-    color: white;
-    transform:translate(0, 1em) ;
-    -webkit-transform:translate(0, 1em) ;
-    -moz-transform:translate(0, 1em) ;
-    -ms-transform:translate(0, 1em) ;
-    -o-transform:translate(0, 1em) ;
+
+    margin-bottom: -3em; 
+    color: white; 
+    
+
+
+
 }
 
 
@@ -149,68 +390,40 @@ font-size: clamp(1.5rem + 1vw, 2rem, 3rem);
 
 
 
-}
+    margin-top: -1em;
 
-/* Refresh message styles */
-.refreshMessageContainer {
-    width: 90%;
-    max-width: 400px;
-    margin: 1.5em auto 0;
-    padding: 1rem;
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    border-radius: 8px;
-    text-align: center;
-}
-
-.refreshMessage {
-    color: #ffcc66;
-    font-size: 0.9rem;
-    line-height: 1.4;
-    margin: 0;
-    font-weight: 500;
-}
-
-@media (min-width: 300px) and (max-width: 900px) {
-
-
-    .buttonSectionContainer{
-
-        display: grid;
-        place-content: center;
-        margin: 3em auto; 
-    
-        margin-bottom: 0.5em !important;
-
-    
-    
-    }
-    
-    
-    .CTAButton{
-       
-        color: white;
-        width: 300px; 
-        height: 55px;  
-        font-weight: bolder;
-        font-size: 1.4rem;
-        
-        background-color: #f49b53;
-        display: grid;
-        place-content: center;
-        border-radius: 14px;
-        -webkit-border-radius: 14px;
-        -moz-border-radius: 14px;
-        -ms-border-radius: 14px;
-        -o-border-radius: 14px;
-        cursor: pointer;
-        
-
-        
-    
-    
-    
-    }
 
 }
 
+
+.secondaryButtonContainer{
+
+
+    width: 99.99vw; 
+    margin: 0 auto; 
+    /* margin-top: -0.8em; */
+    margin-top: 2em !important; 
+
+    display: grid;
+    place-content: center;
+    /* color: white; */
+    color: charcoal; 
+
+    cursor: pointer;
+    
+
+
+}
+
+
+
+.secondaryButton{
+
+
+
+margin-top: -1.5em; 
+
+
+
+
+}
