--- a/app/Styles/email.module.css
+++ b/app/Styles/email.module.css
@@ -63,7 +63,7 @@
     color: white;
 }
 
-.questionTextContainer{
+.question_textContainer{
     color: black !important;
     font-size: 1.3rem;
     width: 70%;
@@ -85,7 +85,7 @@
 
 }
 
-.questionText{
+.question_text{
     color: black !important; 
     position: relative; 
     z-index: 99999;
