--- a/app/Styles/FunctionCard.module.css
+++ b/app/Styles/FunctionCard.module.css
@@ -92,7 +92,7 @@
 
 
 
-.questionTextContainer{
+.question_textContainer{
     font-size: 1rem !important;
     width: 90%;
     text-align: center;
@@ -115,7 +115,7 @@
 
 }
 
-.questionText{
+.question_text{
 
     position: relative; 
     z-index: 99999;
