--- a/app/Styles/PostQuizCard.module.css
+++ b/app/Styles/PostQuizCard.module.css
@@ -67,7 +67,7 @@
     color: white;
 }
 
-.questionTextContainer{
+.question_textContainer{
 
     font-size: 1.3rem;
     width: 70%;
@@ -88,7 +88,7 @@
     -o-transform:translate(-50%, -30%);
 }
 
-.questionText{
+.question_text{
 
     position: relative; 
     z-index: 99999;
