--- a/app/Styles/Quiz.module.css
+++ b/app/Styles/Quiz.module.css
@@ -395,7 +395,7 @@ margin-bottom: 5em;
 
 
 
-.questionTextContainer{
+.question_textContainer{
     color: #404F6F !important;
     font-size: 1.3rem;
     width: 70%;
@@ -421,13 +421,13 @@ margin-bottom: 5em;
 
 }
 
-.questionTextContainer.emailStyle{
+.question_textContainer.emailStyle{
     top: 42%;
 }
 
 
 
-.questionText{
+.question_text{
     /* color: black !important;  */
     color: #404F6F !important; 
 
