--- a/app/Styles/categories.module.css
+++ b/app/Styles/categories.module.css
@@ -101,7 +101,7 @@
 
 }
 
-.questionTextContainer {
+.question_textContainer {
 
 
     color: black !important;
@@ -127,7 +127,7 @@
 
 }
 
-.questionText {
+.question_text {
 
 
     color: black !important; 
