--- a/app/Styles/startCard.module.css
+++ b/app/Styles/startCard.module.css
@@ -68,7 +68,7 @@
     color: white;
 }
 
-.questionTextContainer{
+.question_textContainer{
     font-size: 1.3rem;
     width: 70%;
     text-align: center;
@@ -90,7 +90,7 @@
     -webkit-transform:translate(-50%, -30%) !important;
 }
 
-.questionText{
+.question_text{
 
     position: relative; 
     z-index: 99999;
