--- a/app/Styles/PhoneBarChart.module.css
+++ b/app/Styles/PhoneBarChart.module.css
@@ -1,4 +1,3 @@
-    
 
 .mainChartContainer {
 
@@ -11,9 +10,8 @@
     padding-top: 2rem;
     padding-bottom: 2rem;
 
-
-
 }
+
 
 
 .refSpan{
@@ -38,39 +36,29 @@
     margin: 0rem auto;
 
     margin-top: -0.5em !important; 
-    /* margin-bottom: 1em !important; */
-    
-
     border-radius: 50%;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
 
-
-
-
-
-
 }
 
 .mainChartSubContainer {
 
         width: 100vw; 
-        margin: 0 auto; 
+        margin: 0em auto; 
         display: flex;
         flex-direction: column;
         align-items: center;
         color: rgb(41, 39, 39);
         position: relative; 
         min-height: auto;
-
 }
 
 
 
 .mainChartSubContainerTextSection{
-
 
 
 }
@@ -81,8 +69,7 @@
     width: 100%;
     text-align: center;
     margin-bottom: 1rem;
-    margin-top: -2em;
-    
+    margin-top: -3em;
 
 }
 
@@ -94,14 +81,13 @@
     padding: 1rem;
 }
 
-
-
-
-
 .mainTitleContainer {
     width: 100%;
     text-align: center;
-    margin: 1rem 0;
+    margin: 0 auto;
+
+    margin-top: 2rem !important;
+
 }
 
 
@@ -113,8 +99,7 @@
     width: 90%; 
     text-align: center;
     margin-top: 1.5rem;
-    margin-bottom: -3rem; 
-    
+
 
 }
 
@@ -154,8 +139,7 @@
     display: grid;
     place-content: center;
     height: 50vh; 
-
-
+    
 
 }
 
@@ -164,6 +148,10 @@
     width: 90%; 
     display: grid;
     place-content: center;
+    margin-bottom: -1rem !important;
+
+
+
 }
 
 .barChartListItem {
