--- a/app/Styles/categories.module.css
+++ b/app/Styles/categories.module.css
@@ -248,28 +248,13 @@
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 .ivviLogoContainer{
 
     
     margin: 0 auto;
     display: grid;  
     place-content: center;
-
     margin-top: 4em; 
-
 
 
 }
@@ -281,7 +266,6 @@
 
     margin: 0 auto;
     margin-bottom: -4em;
-
     color: white; 
     font-weight: bolder;
     font-size: 1.2rem !important; 
@@ -290,10 +274,6 @@
 }
 
 .logo{
-
-
-
-
 
 
 }
@@ -313,7 +293,34 @@
     margin: 0em auto; 
 
     margin-top: -5em; 
+    position: relative;
+    z-index: 10;
 
+
+}
+
+
+.buttonSectionContainer:hover{
+
+    transform:scale(0.98);
+    -webkit-transform: scale(0.98);
+    -moz-transform: scale(0.98);
+    -ms-transform: scale(0.98);
+    -o-transform: scale(0.98);
+
+
+
+
+}
+
+
+.buttonSectionContainer:active{
+
+    transform:scale(0.98);
+    -webkit-transform: scale(0.98);
+    -moz-transform: scale(0.98);
+    -ms-transform: scale(0.98);
+    -o-transform: scale(0.98);
 
 }
 
