--- a/app/Styles/FunctionCard.module.css
+++ b/app/Styles/FunctionCard.module.css
@@ -130,6 +130,16 @@
 }
 
 
+.functionSpan{
+
+
+    font-size: 1.5rem;
+
+
+
+}
+
+
 .supportingTextSectionContainer{
         position: absolute;
         width: 90%;
@@ -350,6 +360,16 @@
 }
 
 
+.supportingTextSpan{
+
+
+
+
+
+
+}
+
+
 
 
 .affectsList{
@@ -442,5 +462,148 @@
     place-content: center;
     margin-top: 0.5em; 
     color: #7d879b; 
+
+}
+
+
+@media(min-width: 1100px){
+
+    .question_textContainer{
+        font-size: 1rem !important;
+        width: 70%;
+        text-align: center;
+        margin: 0 auto;
+        position: absolute;
+        bottom: -6%;
+    
+    
+    }
+    
+    .question_text{
+    
+        position: relative; 
+        margin: 4.5rem auto;
+        width: 100%; 
+    
+    
+    }
+    
+    
+    .functionSpan{
+    
+    
+        font-size: 1.5rem;  
+
+
+        
+    }
+    
+    
+    .supportingTextSectionContainer{
+        width: 90%;
+        margin: 0 auto;
+        position: absolute;
+        bottom: 0%;
+        
+
+    }
+    
+    
+    .supportingText{
+    
+        font-weight: lighter !important;
+        font-size: 0.7rem !important;
+    
+    
+    
+    
+    
+    }
+
+
+    .supportingTextSpan{
+
+
+        font-size: 1rem !important;
+
+
+
+    }
+
+
+    .mainSupportingTextContainer{
+
+
+        font-size: 1rem !important;
+
+    }
+    
+
+
+
+
+
+}
+
+
+
+@media(min-width: 300px) and (max-width: 1100px){
+
+
+    .question_textContainer{
+        font-size: 1rem !important;
+        width: 90%;
+        margin: 0 auto;
+        position: absolute;
+        bottom: 9%;
+
+    
+    
+    }
+    
+    .question_text{
+    
+        position: relative; 
+        margin: 4.5rem auto;
+        width: 100%; 
+    
+    
+    }
+    
+    
+    .functionSpan{
+    
+    
+        font-size: 1.5rem;
+    
+    
+    
+    }
+    
+    
+    .supportingTextSectionContainer{
+            position: absolute;
+            width: 90%;
+            margin: 0 auto;
+            bottom: 6.6%;
+                
+    
+    }
+    
+    
+    .supportingText{
+    
+        font-weight: lighter !important;
+    
+    }
+
+    .mainSupportingTextContainer{
+
+
+        font-size: 1.125rem !important;
+
+
+    }
+
 
 }
