--- a/app/Styles/LegalCard.module.css
+++ b/app/Styles/LegalCard.module.css
@@ -23,7 +23,8 @@
 .cardMainContainer{
 
 
-    outline: 12px solid lime;
+    /* outline: 12px solid lime; */
+
 
 
 
@@ -35,7 +36,8 @@
 
 
 
-    outline: 15px solid red;
+    /* outline: 15px solid red; */
+
 
 
 
@@ -116,7 +118,8 @@
 .headerImageContainer{
 
 
-    outline: 2px solid red;
+    /* outline: 2px solid red; */
+
     display: grid;  
     place-content: center;
     /* margin: 0 auto;  */
@@ -140,11 +143,10 @@
     font-family: var(--font-nunito), sans-serif;
     
     z-index: 9999999;
-    position: relative;
-
+    position: absolute;
     bottom: 13%;
     left: 50%;
-    outline: 3px solid lime;
+    /* outline: 3px solid lime; */
     right: 50%;
     transform:translate(-50%, -50%) !important;
     -webkit-transform:translate(-50%, -50%) !important;
@@ -189,13 +191,15 @@
         color: #65656C; 
         font-weight: lighter !important;
 
-        outline: 5px solid lime !important;
+
+
+        /* outline: 5px solid lime !important; */
+
         /* background-color: red !important; */
 }
 
 
 .supportingText{
-
     font-weight: lighter !important;
     font-size: 1rem !important;
 
@@ -434,7 +438,6 @@ text-decoration: underline;
     max-width: 600px;
 
 
-    outline: 5px solid ;
 
 
 
@@ -676,7 +679,8 @@ and the Samsung S24 & Galaxy A40 not sure about the Samsung Galaxy A54 because i
     .cta{
 
 
-        outline: 3px solid red  !important;
+        /* outline: 3px solid red  !important; */
+
         
 
 
@@ -714,7 +718,8 @@ and the Samsung S24 & Galaxy A40 not sure about the Samsung Galaxy A54 because i
     .cta{
 
 
-        outline: 3px solid lime  !important;
+        /* outline: 3px solid lime  !important; */
+
         
 
 
@@ -751,7 +756,8 @@ and the Samsung S24 & Galaxy A40 not sure about the Samsung Galaxy A54 because i
     .cta{
 
 
-        outline: 3px solid blue  !important;
+        /* outline: 3px solid blue  !important; */
+
         
 
 
@@ -764,7 +770,19 @@ and the Samsung S24 & Galaxy A40 not sure about the Samsung Galaxy A54 because i
 
 
 /* Add in the laptop media query here  */
+/* Roughly 1536px but you might need to add in a lower range to accommodate for a larger range of screens  */
+@media(min-width: 1300px) and (max-width: 1900px){
 
 
+
+    /* Adjust the placement of the Main Headline Text here and the Supporting text  */
+        
+
+
+
+
+
+
+}
 
 
